Colors fixed in dark mode

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,5 +1,7 @@
 .main {
+  margin: auto;
   display: grid;
   margin-top: 7rem;
   column-gap: 3rem;
+  max-width: 1300px;
 }
