--- a/src/Shared/Footer/Footer.scss
+++ b/src/Shared/Footer/Footer.scss
@@ -1,6 +1,7 @@
 @import "/src/Sass/abstracts.scss";
 
 .footer {
+  width: 100%;
   background-color: var(--color-primary);
   color: var(--color-white);
   text-align: center;
