--- a/src/Shared/ThemeToggler/ThemeToggler.scss
+++ b/src/Shared/ThemeToggler/ThemeToggler.scss
@@ -1,7 +1,7 @@
 .theme-toggler {
   position: fixed;
   z-index: 1000;
-  padding: 1rem;
+  padding: 1rem 5rem;
   margin-top: 0;
   &__icon {
     width: 35px;
