--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,5 @@
   --color-black: #23120b;
   --color-grey: #d9dab0;
   --color-grey-light: #e2e2e2;
-  --color-icons: #eeeeee;
+  --color-icons: #e2e2e2;
 }
-/* --color-primary: #798777; */
-/* --color-white: #010101; */
-/* --color-black: #bbe1fa; */
-/* --color-grey-light: #222; */
